Fix jumping buttons on mobile

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body,
 .buttons {
   display: flex;
   gap: 20px;
+  margin-bottom: 100px;
 }
 
 button,
@@ -50,6 +51,9 @@ button {
 }
 
 @media (max-width: 800px) {
+  .aligner {
+    justify-content: flex-end;
+  }
   .buttons {
     flex-direction: column;
   }
